<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    android:paddingTop="35dp"
    tools:context=".PersegiActivity"
    android:background="@drawable/o">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/menghitung_persegi"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginTop="28dp"
        android:textColor="@color/bgButton"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="102dp"
        android:textSize="18sp"
        android:text="@string/masukkan_panjang"
        android:textColor="@color/bgButton"
        android:textStyle="bold"/>

    <EditText
        android:layout_width="1000dp"
        android:layout_height="wrap_content"
        android:id="@+id/et_length"
        android:inputType="numberDecimal"
        android:lines="1"
        android:layout_marginTop="137dp"
        android:textColor="@color/bgButton"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="202dp"
        android:text="@string/masukkan_lebar"
        android:textColor="@color/bgButton"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="1000dp"
        android:layout_height="wrap_content"
        android:id="@+id/et_width"
        android:inputType="numberDecimal"
        android:lines="1"
        android:layout_marginTop="238dp"/>

    <Button
        android:layout_width="1000dp"
        android:layout_height="55dp"
        android:id="@+id/btn_count2"
        android:background="@drawable/bg_hover4"
        android:layout_marginTop="312dp"/>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/luas"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_marginTop="382dp"
            android:textColor="@color/bgButton"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_result_5"
            android:text="@string/hasil_luas"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_marginTop="382dp"
            android:textColor="@color/bgButton"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keliling"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="420dp"
            android:textColor="@color/bgButton"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_result_6"
            android:text="@string/hasil_keliling"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="420dp"
            android:textColor="@color/bgButton"/>

    </LinearLayout>

    <TextView

        android:layout_width="171dp"
        android:layout_height="71dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="520dp"
        android:background="@drawable/logo" />

</RelativeLayout>