<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingRight="50dp"
    android:paddingLeft="50dp"
    android:paddingTop="35dp"
    tools:context=".LingkaranActivity"
    android:background="@drawable/o">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/menghitung_lingkaran"
        android:textAlignment="center"
        android:textSize="22sp"
        android:layout_marginTop="28dp"
        android:textStyle="bold"
        android:textColor="@color/bgButton"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/masukkan_jari_jari"
        android:layout_marginTop="102dp"
        android:textSize="18sp"
        android:textColor="@color/bgButton"
        android:textStyle="bold"/>

    <EditText
        android:layout_width="1000dp"
        android:layout_height="wrap_content"
        android:id="@+id/et_radius"
        android:inputType="numberDecimal"
        android:lines="1"
        android:textColor="@color/bgButton"
        android:layout_marginTop="137dp"/>

    <Button
        android:id="@+id/btn_count1"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="212dp"
        android:background="@drawable/bg_hover4"
        android:textSize="25sp" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/luas_l"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_marginTop="282dp"
            android:textColor="@color/bgButton"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_result_3"
            android:text="@string/hasil_luas"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="@color/bgButton"
            android:layout_marginTop="282dp"/>


    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keliling_lingkara"
            android:textStyle="bold"
            android:textSize="17sp"
            android:textColor="@color/bgButton"
            android:layout_marginTop="310dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_result_4"
            android:text="@string/hasil_keliling"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/bgButton"
            android:layout_marginTop="310dp"/>

    </LinearLayout>

    <TextView

        android:layout_width="171dp"
        android:layout_height="71dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="520dp"
        android:background="@drawable/logo" />

</RelativeLayout>